<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="da_app_name">LDSDK Demo</string>
    <string name="da_no_data_desc">Ingen data</string>
    <string name="da_device_status_average_rssi">Average RSSI: %d</string>
    <string name="da_device_list_title">Devices</string>
    <string name="da_device_connected_menu_disconnect">Disconnect</string>
    <string name="da_device_connected_to_title">Connected to: %s</string>
    <string name="da_device_status_connecting">Connecting…</string>
    <string name="da_device_status_interrogating">Interrogating…</string>
    <string name="da_device_status_connected">Connected</string>
    <string name="da_device_connected_battery_level_label">Battery Level</string>
    <string name="da_device_connected_battery_level_value_unit" formatted="false">%</string>
    <string name="da_device_details_name_label">Device Name</string>
    <string name="da_device_details_info_header">Device info</string>
    <string name="da_device_details_name_header">Device name</string>
    <string name="da_device_details_firmware_label">Firmware revision</string>
    <string name="da_device_details_hardware_label">Hardware revision</string>
    <string name="da_device_details_software_label">Software revision</string>
    <string name="da_device_details_manufacturer_label">Manufacturer name</string>
    <string name="da_device_connected_firmware_divider_label">FW:</string>
    <string name="da_device_connected_hardware_divider_label">HW:</string>
    <string name="da_device_connected_software_divider_label">SW:</string>
    <string name="da_device_connected_manufacturer_divider_label">Manufacturer:</string>
    <string name="da_service_overview_id_divider_label">ID:</string>
    <string name="da_service_overview_hub_divider_label">HUB:</string>
    <string name="da_service_overview_id_type_label">Type:</string>
    <string name="da_device_details_send_update_button">Send update</string>
    <string name="da_device_details_button_state_label">Button state</string>
    <string name="da_device_details_battery_level_label">Battery level</string>
    <string name="da_button_state_pressed">Pressed</string>
    <string name="da_button_state_not_pressed">Unpressed</string>
    <string name="da_common_not_applicable">N/A</string>
    <string name="da_service_details_base_hw_sw">%1$s/%2$s</string>
    <string name="da_service_details_motor_header">Motor Controls</string>
    <string name="da_service_details_motor_direction_label">Direction</string>
    <string name="da_service_details_motor_direction_left_button">Left</string>
    <string name="da_service_details_motor_direction_right_button">Right</string>
    <string name="da_service_details_motor_brake_button">Brake</string>
    <string name="da_service_details_motor_drift_button">Drift</string>
    <string name="da_service_details_base_hw_fw_label">Hardware/Firmware</string>
    <string name="da_service_details_base_value_label">Value</string>
    <string name="da_service_details_base_mode_label">Mode</string>
    <string name="da_service_details_base_send_read_request_button">Send read request</string>
    <string name="da_service_details_base_request_sensor_state_button">Reset sensor state</string>
    <string name="da_service_base_header">%s Information</string>
    <string name="da_service_details_motor_power_status_braking">Braking</string>
    <string name="da_service_details_motor_power_status_drifting">Drifting</string>
    <string name="da_service_details_motor_power_status_right">Motor Right %d</string>
    <string name="da_service_details_motor_power_status_left">Motor Left %d</string>
    <string name="da_device_connected_perform_windmill_test">Windmill Test</string>
    <string name="da_windmill_motor_header">Motor</string>
    <string name="da_windmill_button_full_speed">Full Speed</string>
    <string name="da_windmill_button_stop">Stop</string>
    <string name="da_windmill_motion_sensor_header">Motion Sensor</string>
    <string name="da_windmill_motion_sensor_current_value_label">Current value</string>
    <string name="da_common_decrease_symbol">–</string>
    <string name="da_common_increase_symbol">+</string>
    <string name="da_windmill_motion_sensor_shift_direction_enabled_label">Shift direction enabled</string>
    <string name="da_windmill_motion_sensor_shift_count_label">Shift count</string>
    <string name="da_windmill_motion_sensor_trigger_high_status">Trigger level high: %d</string>
    <string name="da_windmill_motion_sensor_trigger_low_status">Trigger level low: %d</string>
    <string name="da_windmill_motor_power_status">Power: %d</string>
    <string name="da_common_alert_dialog_title">Oops!</string>
    <string name="da_common_alert_dialog_neutral_button">OK</string>
    <string name="da_common_null">null</string>
    <string name="da_service_overview_unit">(%s):</string>
    <string name="da_service_overview_value">\u0020 \u003c%s\u003e</string>
    <string name="da_service_overview_type">%1$s (%2$s)</string>
    <string name="da_service_details_base_format_label">Format</string>
    <string name="da_service_base_details_format">Unit: %1$s Delta: %2$d</string>
    <string name="da_service_details_base_format_revision_label">Format Revision</string>
    <string name="da_service_details_base_format_connect_id_label">Connect ID</string>
    <string name="da_service_details_base_format_mode_label">Mode</string>
    <string name="da_service_details_base_format_no_of_bytes_label">Number of Bytes</string>
    <string name="da_service_details_base_format_unit_label">Unit</string>
    <string name="da_service_details_base_format_delta_interval_label">Delta Interval</string>
    <string name="da_service_details_base_format_notifications_enabled_label">Notifications Enabled</string>
    <string name="da_service_details_base_format_type_id">Type ID</string>
    <string name="da_service_details_base_format_send_update_button">Send update</string>
    <string name="da_service_details_base_format_reset_button">Reset</string>
    <string name="da_service_details_base_format_unit_sublabel">Raw = 0, Pct. = 1, SI = 2</string>
    <string name="da_service_details_base_format_header">Edit Input Format</string>
    <string name="da_service_details_piezo_header">PIEZO CONTROLS</string>
    <string name="da_service_details_piezo_frequenzy_label">Frequency</string>
    <string name="da_service_details_piezo_duration_label">Duration/Interval [ms]</string>
    <string name="da_service_details_piezo_play_button">Start Playing</string>
    <string name="da_service_details_piezo_sequence">Start Playing Sequence</string>
    <string name="da_service_details_piezo_stop">Stop Playing</string>
    <string name="da_service_details_piezo_note_description">A sequence will start at 10Hz and increment by \'frequency\' on each \'duration/interval\'</string>
    <string name="da_service_details_piezo_note_c">C</string>
    <string name="da_service_details_piezo_note_d">D</string>
    <string name="da_service_details_piezo_note_e">E</string>
    <string name="da_service_details_piezo_note_f">F</string>
    <string name="da_service_details_piezo_note_g">G</string>
    <string name="da_service_details_piezo_note_a">A</string>
    <string name="da_service_details_rgb_header">RGB Controls</string>
    <string name="da_service_details_rgb_seek_bar_red_label">Red</string>
    <string name="da_service_details_rgb_seek_bar_blue_label">Blue</string>
    <string name="da_service_details_rgb_seek_bar_green_label">Green</string>
    <string name="da_service_details_rgb_color_index_label">Color index: %d</string>
    <string name="da_service_details_rgb_write_color_button">Write Color</string>
    <string name="da_service_details_rgb_witch_off_button">Switch Off</string>
    <string name="da_service_details_rgb_switch_to_default_button">Switch To Default</string>
    <string name="da_service_details_rgb_color_sample">Color Sample (%s)</string>
    <string name="da_service_details_tilt_header">TILT SENSOR INFORMATION</string>
    <string name="da_service_details_tilt_mode_label">Mode</string>
    <string name="da_service_details_tilt_value_label">Value</string>
    <string name="da_device_status_no_longer_advertising">No longer advertising</string>
    <string name="da_device_discovery_menu_settings">Settings</string>
    <string name="da_discovery_settings_auto_reconnect">Enable Auto Reconnect</string>
    <string name="da_discovery_settings_rssi_threshold">RSSI Threshold</string>
    <string name="da_alert_dialog_lost_connection_message">Lost connection to device: %s</string>
    <string name="da_alert_dialog_failed_to_connect_message">Failed to connect to device: %s</string>
    <string name="da_device_discovery_menu_refresh">Refresh</string>
    <string name="da_device_discovery_menu_about">About</string>
    <string name="da_about_dialog_message">DemoApp:\nv.%1$s\nLegoDeviceSDK:\nv.%2$s\nTested with Firmware:\nv.%3$s</string>
    <string name="da_about_dialog_title">About</string>
</resources>
